# OCEV

./: .gitignore  exx1.py  lab.txt  pyproject.toml
Individuals/: BinaryIndividual.py  Individual.py  IntIndividual.py  IntPermIndividual.py  RealIndividual.py  testEx1.py
Proj/: auxFunctions.py  binaryIndividual.py  evoAlg.py  fitness.py  fkIndex.py  input.json  intIndividual.py  intPermIndividual.py  main.py  problemsDesc.txt  realIndividual.py  testes.py
Proj/Fncs/: fitness.py  manipulationFunctions.py  mazeFitness.py  queensFitness.py  radioFitness.py
Proj/Individuals/: binaryIndividual.py  individual.py  intIndividual.py  intPermIndividual.py  realIndividual.py
Proj/Problems/: N-Queens.txt  Radios.txt
Relatorios/: OCEV___Labirinto.pdfZone.Identifier  OCEV___Nqueens_Rádios.pdfZone.Identifier
