[tool.poetry]
name = "ocev"
version = "0.1.0"
description = ""
authors = ["Brunokrk <piresbr@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.26.0"
taskipy = "^1.12.0"
numpy = "^1.25.2"
polars = "^0.18.15"
plotly = "^5.16.1"
streamlit-elements = "^0.1.0"
streamlit-plotly-events = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
